--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions to Publish docker image 
-run-name: ${{github.actor}} in Action 🚀
+run-name: ${{ github.actor }} in Action 🚀
 on: 
     push :
         branches:
@@ -13,7 +13,7 @@ jobs:
 
       - name: Build and Tag docker image
         run : | 
-            docker build -t ${{secrets.USERNAME}}/uas-pcc-rafliardiansyah-2024:latest -f Dockerfile .
+            docker build -t ${{secrets.USERNAME}}/uas-pcc-rafli-2024:v1 -f Dockerfile .
 
       - name: Push to Dockerhub
-        run: docker login -u ${{secrets.USERNAME}} -p ${{secrets.ACCESS_TOKEN}} && docker push ${{secrets.USERNAME}}/uas-pcc-rafliardiansyah-2024:latest
+        run: docker login -u ${{secrets.USERNAME}} -p ${{secrets.ACCESS_TOKEN}} && docker push ${{secrets.USERNAME}}/uas-pcc-rafli-2024:v1
